<resources>
    <string name="app_name">TylerRicardC196</string>
    <string name="welcome_to_my_project">Welcome to My Project</string>
    <string name="view">View...</string>
    <string name="terms">Terms</string>
    <string name="courses">Courses</string>
    <string name="assignments">Assignments</string>
    <string name="string_terms">Terms</string>
    <string name="string_string_terms" />
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_term_ui">TermUI</string>
    <string name="view_details">View Details</string>
    <string name="string_term_details" />
    <string name="add_term">Add Term</string>
    <string name="term_details">term details</string>
    <string name="Term_Details">Term Details</string>
    <string name="Course_Name">Course Name</string>
    <string name="Course_name">Course Name</string>
    <string name="Enter_Course_name">Enter_Course_Name</string>
    <string name="EnterCourseName">Enter Course Name</string>
    <string name="Term_Name">Term Name</string>
    <string name="Enter_Term_Name">Enter Term Name</string>
    <string name="enter_term_name">Enter Term Name</string>
    <string name="save">save</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="term_start_date">Term Start Date</string>
    <string name="term_end_date">Term End Date</string>
    <string name="cancel">Cancel</string>
    <string name="term">Term</string>
    <string name="add_course">Add Course</string>
    <string name="course_details">Course Details</string>
    <string name="status">Status</string>
    <string name="instructor_name">Instructor Name</string>
    <string name="instructor_phone_number">Instructor Phone Number</string>
    <string name="instructor_email">Instructor Email</string>
    <string name="enter_course_name">Enter Course Name</string>
    <string name="enter_instructor_name">Enter Instructor Name</string>
    <string name="enter_end_date">Enter End Date</string>
    <string name="enter_start_date">Enter Start Date</string>
    <string name="enter_inst_phone_number">Enter Inst. Phone Number</string>
    <string name="enter_inst_email">Enter Inst. Email</string>
    <string name="notes">Notes</string>
    <string name="enter_notes">Enter Notes</string>
    <string name="delete">Delete</string>
    <string name="term_id">Term ID</string>
    <string name="disabled">Disabled</string>
    <string name="select_term">Select Term</string>
    <string name="textview">TextView</string>
    <string name="course_id">Course ID:</string>
    <string name="add_assignment">Add Assignment</string>
    <string name="assignment_details">Assignment Details</string>
    <string name="string_assignment_details" />
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="assigned_course">Assigned Course</string>
    <string name="enter_assignment_name">Enter Assignment Name</string>
    <string name="assignment_id">Assignment ID</string>
    <string name="course">Course</string>
    <string name="assignment_name">Assignment Name</string>
    <string name="channel_name">mychannel</string>
    <string name="channel_description">myChannelDescription</string>
    <string name="share">Share</string>
    <string name="set_notification">Set Notification</string>

    <string-array name="courseStatus">
        <item>In Progress</item>
        <item>Dropped</item>
        <item>Not Started</item>
    </string-array>

    <string-array name="assignmentTypes">
        <item>Performance Assessment</item>
        <item>Objective Assessment</item>
    </string-array>


</resources>